--- a/style.css
+++ b/style.css
@@ -32,15 +32,14 @@ html body {
     height: 100vh;
     background: url(./imgs/bull-bg.jpg);
     background-size: cover;
-    align-items: center;
-    justify-content: center;
+
     flex-grow: 1;
 }
 
 /* The div around the form */
 .form-selection {
     display: flex;
-    width: 30vw;
+    width: 10vw;
     flex-direction: column;
     justify-content: center;
     align-items: start;
@@ -88,12 +87,14 @@ label {
 }
 
 input {
+    border-radius: 5px;
     border: 1px solid #dfdfdf;
     box-sizing: border-box;
     width: 50%;
+    padding: 4px 5px;
 
-    margin-top: -5px;
-    margin-bottom: 10px;
+
+    
 }
 
 input:focus {
@@ -110,11 +111,12 @@ input:focus:valid {
     border: 2px solid rgb(51, 219, 35);
   }
 
-.erorr {
-    font-size: 0.7rem;
+  .error {
+    font-family: 'Karla', sans-serif;
+    font-size: 0.8rem;
     color: rgb(231, 13, 13);
-    position: absolute;
-}
+    position: relative;
+  }
 
 a {  /* Log in */
     text-decoration: none;  
